# QEC-on-FPGA-Systems

./: CMakeLists.txt  Cmakelists.txt  Makefile  README.md  makefile_us_alveo.mk
hostcode/: host.cpp  host.h
src/: Decoder.cpp  Decoder.h  Defines.h  Hashmap.cpp  Hashmap.h  Project.cpp  Project.h
src/LUT/: Hashmap.cpp  Hashmap.h
src/ProjectC/: FRATC.cpp  FRATC.h
src/UnionFind/: CodeFromParity.h  Decoder.cpp  Decoder.h  RootManager.cpp  RootManager.h  SurfaceCode.h
src/Utility/: Map.h  Vector.h
testBench/: 2000samples.txt  500samples.txt  Decoder_dataset.txt  HashTest.cpp  LUT.txt  TestBench.cpp  VectorTest.cpp  data.txt  test.txt
